FlightPath 6.x Changelog
========================


2021-08-12
  Cleaned up some CSS for the permissions form (in the user module).
  
  Added "sticky" headers to permissions form to make it easier to use.
  

2021-08-11
  Added a "custom settings" area to the default settings.php which is created during the installation process.  Also changed some of the wording in the
  settings.php file, for clarity.
    

2021-08-10
  Made the access stats report look nicer.
  
  Added more logging (including WATCHDOG_DEBUG) throughout FlightPath to make it easier to track activity.
  
  Added more time to setting to keep DEBUG entries, as well as wrapped more strings in t().
  
  Made changes to stats to make it easier to add a "school select" form for reports that need it.
  
  Adjusted major students progress report to use school_id correctly.
  

2021-08-09
  Fixed bug with What If limit on selections; wasn't counting tracks correctly.
  

2021-08-08
  Added the school_id and school_code to body class when viewing students.  The idea is to help CSS developers down the road.
  
  Cleaned up some on-screen messaging when changing terms.
  
  Added "spinner" property to apply draft changes button, changed description text as well.
  
  Fixed bug in editing group definitions where it was not respecting the new setting which allows "default" courses as well.
  Also it was not properly disabling the Required Courses textarea, as it was using a String and not an Array for attributes.
  
  Made it so that when setting attributes on a form element, it must always be in the form of an array.  Updated various files
  throughout FlightPath to make sure that was the case.
  
  Added new file, cli.php.  It's a command-line-only file.  At the moment, all it can do is clear the system's cache, but more commands
  will be added eventually.
  

2021-08-06
  Added new module_enabled() function to misc, which, due to caching, will make it faster to see if a module